src/workflows/snapshots/home_gateway__workflows__plan__tests__mode_trigger_and_set_mode_step.snap
---
source: src/workflows/plan.rs
expression: rendered_with_header(&wf)
---
on: mode(home -> vacation)
light: light(0x1) -> Off
set_mode: set_mode(away) [when: mode is guest]
