src/workflows/snapshots/home_gateway__workflows__plan__tests__movie-night.snap
---
source: src/workflows/plan.rs
expression: out
---
# Living room movie night  (on: jellyfin(Living room TV, Google TV Streamer))
  lua: lua(call movie.playback) -> []
