src/workflows/snapshots/home_gateway__workflows__plan__tests__nested_run_workflow.snap
---
source: src/workflows/plan.rs
expression: "rendered(&all, &entry)"
---
light: light(0x1) -> On
  notify: notify(AndroidApp, general): from leaf [when: time after 22:00:00]
