src/workflows/snapshots/home_gateway__workflows__plan__tests__presence_trigger_with_sun_night_guard.snap
---
source: src/workflows/plan.rs
expression: rendered_with_header(&wf)
---
on: presence(living-room-epp) -> true
when: sun is Night
light: light(0x1) -> On
