src/workflows/snapshots/home_gateway__workflows__plan__tests__purifier.snap
---
source: src/workflows/plan.rs
expression: out
---
# Living room purifier enforce quiet mode and display  (on: air_purifier(living-room-purifier) -> on)
  when: any[not(event.mode | default("") Eq "sleep"), event.display | default(false) Eq true]
  lua: lua(call purifier.enforce_quiet) -> []

# Living room purifier filter low  (on: cron(0 9 * * *))
  lua: lua(call reminders.filter_low) -> []
