src/workflows/snapshots/home_gateway__workflows__plan__tests__rain.snap
---
source: src/workflows/plan.rs
expression: out
---
# Rain Today  (on: weather(willyweather).today_rain_probability Gte 70)
  when: time in [09:00:00, 12:00:00)
  notify: notify(AndroidApp, general): Rain likely today: ${event.today.rain_probability | int}% chance
