src/workflows/snapshots/home_gateway__workflows__plan__tests__recursion_depth_cap.snap
---
source: src/workflows/plan.rs
expression: "rendered(&all, &entry)"
---
                depth_exceeded: loop
