src/workflows/snapshots/home_gateway__workflows__plan__tests__simple_light.snap
---
source: src/workflows/plan.rs
expression: "rendered(&HashMap::new(), &wf)"
---
light: light(0x1) -> On
notify: notify(AndroidApp, general): kitchen on
