src/workflows/snapshots/home_gateway__workflows__plan__tests__small-switch.snap
---
source: src/workflows/plan.rs
expression: out
---
# Small Switch  (on: switch(small-switch) any action)
  lua: lua(call small_switch.tap) -> []
