src/workflows/snapshots/home_gateway__workflows__plan__tests__sun_condition_nested_in_all.snap
---
source: src/workflows/plan.rs
expression: rendered_with_header(&wf)
---
reusable
light: light(0x1) -> On [when: all[sun is Day, not(sun is Night)]]
