src/workflows/snapshots/home_gateway__workflows__plan__tests__sun_sunrise_trigger.snap
---
source: src/workflows/plan.rs
expression: rendered_with_header(&wf)
---
on: sun -> Sunrise
light: light(0x1) -> Off
